# b3_price_monitoring

./: .dockerignore  .env-example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  DEVELOPMENT.md  Dockerfile  FRONTEND.md  README.md  TESTS.md  docker-compose.yml  pyproject.toml
.github/workflows/: tests.yml
accounts/: admin.py  signals.py  urls.py
accounts/forms/: __init__.py  password_change.py  password_reset_confirm.py  profile_update.py  user_registration.py
accounts/migrations/: 0001_initial.py  0002_userprofile.py
accounts/models/: __init__.py  user.py  user_profile.py
accounts/templates/accounts/: login.html  logout.html  registration.html
accounts/views/: __init__.py  login.py  logout.py  password_change.py  password_reset.py  profile_delete.py  profile_detail.py  profile_update.py  registration.py
assets/: admin.py  models.py  tests.py  urls.py
assets/forms/: __init__.py  asset_create.py  asset_form.py  asset_update.py
assets/forms/tests/: test_asset_form.py
assets/migrations/: 0001_initial.py  0002_asset_type.py  0003_alter_asset_ticker.py  0004_assetprice.py  0005_rename_ticker_asset_symbol_and_more.py
assets/models/: __init__.py  asset.py  asset_price.py
assets/models/tests/: test_asset.py
assets/services/brapi/: api_handler.py  asset_validator.py
assets/services/hg/: api_handler.py  asset_validator.py
assets/services/yfinance/: api_handler.py  asset_validator.py  constants.py
assets/templates/assets/: asset_create.html  asset_delete.html  asset_detail.html  asset_list.html  asset_update.html
assets/views/: __init__.py  asset_create.py  asset_delete.py  asset_detail.py  asset_list.py  asset_update.py
core/: __init__.py  celery.py  settings.py  urls.py
globals/: tasks.py
globals/services/: __init__.py  exchange_rate.py
static/css/: theme.css
templates/: base.html  base_auth.html
templates/error/: 404-error.html  maintenance.html
templates/partials/: _delete_confirm.html  _empty_state.html  _form_actions.html  _form_field.html  _messages.html  _sidebar.html  _topbar.html
templates/registration/: login.html
themes/dasher-1.0.0/: README.md
tunnels/: admin.py  apps.py  models.py  tasks.py  urls.py
tunnels/forms/: __init__.py  interaval_ckeck_create.py  tunnel_create.py  tunnel_update.py
tunnels/migrations/: 0001_initial.py  0002_periodictaskassociation.py  0003_alter_pricetunnel_check_interval_minutes.py
tunnels/models/: __init__.py  periodic_task_association.py  price_tunnel.py
tunnels/tasks/: __init__.py  price_checks.py  tunnel_asset_price_check.py
tunnels/utils/: tunnel_manager.py
tunnels/views/: __init__.py  tunnel_create.py  tunnel_delete.py  tunnel_detail.py  tunnel_interval_check_create.py  tunnel_list.py  tunnel_update.py
(+56 files in other folders)
