[project]
name = "b3-price-monitoring"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery[redis]>=5.6.2",
    "django==5.2",
    "django-celery-beat>=2.1.0",
    "flower>=2.0.1",
    "python-decouple>=3.8",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=6.2.0",
    "ruff>=0.15.1",
]
