[project]
name = "b3-price-monitoring"
version = "0.1.0"
description = "A Django application for monitoring stock prices on the B3 exchange."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery[redis]>=5.6.2",
    "django==5.2",
    "django-celery-beat>=2.1.0",
    "flower>=2.0.1",
    "pillow>=12.1.1",
    "psycopg[binary]>=3.3.2",
    "python-decouple>=3.8",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "bandit>=1.9.3",
    "django-debug-toolbar>=6.2.0",
    "pre-commit>=4.5.1",
    "ruff>=0.15.1",
]

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = [
  "E",    # pycodestyle
  "F",    # pyflakes
  "I",    # isort
  "B",    # flake8-bugbear
  "UP",   # pyupgrade
  "DJ",   # django-specific rules
  "SIM",  # simplificações
  "C4",   # comprehensions
]

ignore = ["DJ001"]

[tool.ruff.lint.isort]
known-first-party = ["b3_price_monitoring"]

[tool.setuptools]
packages = ["b3_price_monitoring"]
